@@ -3,6 +3,8 @@
 HEAD
 ====
 Enhancements:
+- build: deactivate type-checking of the *_cast() macros for clang due to a
+  compiler bug involving nested structs-in-typeofs
 - io: add HX_mkdir2 which can take a mode argument
 - string: add a HX_strndup function
 - string: add a HX_strnlen function
